Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.1.0-rc1
-
None
Description
The 'Change prefix' action in the context menu for a qrc prefix node in the Projects Pane does not work.
How to reproduce
Create e.g. a new "Qt QUick Application" for Qt Quick 2.0 via the wizard.
Right click on '/' node underneath qml.qrc, select "Change prefix..."
Type a new prefix
What happens
nothing
What I expect to happen
That the prefix is changed and the qml.qrc file is updated accordingly.
Attachments
For Gerrit Dashboard: QTCREATORBUG-11719 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
80855,1 | ResourceNode: Fix renaming prefix | 3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
103171,2 | ProjectExplorer: Fix changing language via context menu | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |