ResourceNode: Fix renaming prefix

Task-number: QTCREATORBUG-11719
Change-Id: Ib24dd7bf644bbebca3d9a694ec2b98709cfd6cf2
Reviewed-by: Kai Koehne <kai.koehne@digia.com>